Added sketch for multilingual support (with the use of dislines in future commits)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-twitter w3-hover-opacity"></i></a>
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <div class="w3-bar-item w3-right w3-hide-small" style="cursor:default">|</div>
+        <div class="w3-bar-item w3-button w3-hide-small w3-right lang" id="spanish_lang"><i class="fa"><img src="imgs/flag-of-spain.jpg"></i></div>
+        <i class="w3-bar-item w3-button w3-hide-small w3-right lang" id="english_lang"><img src="imgs/flag-of-english.jpg"></i>
     </div>
 
     <div class="menu hidden" id="menu">
