--- a/index.html
+++ b/index.html
@@ -280,14 +280,13 @@
         </noscript>
 
         <div class="w3-container w3-padding-64">
-            <div id="in_construction">Not Ready</div>
             <h4>Contact</h4>
             <form id="contact_form">
                 <div class="w3-half">
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-user"></i></div>
                         <div class="w3-rest">
-                            <input class="w3-input w3-border" name="first" type="text" placeholder="First Name">
+                            <input class="w3-input w3-border" name="firstname" type="text" placeholder="First Name">
                         </div>
                     </div>
 
@@ -310,14 +309,14 @@
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-pencil"></i></div>
                         <div class="w3-rest">
-                            <input class="w3-input w3-border" name="message" type="text" placeholder="Subjet">
+                            <input class="w3-input w3-border" name="subject" type="text" placeholder="Subjet">
                         </div>
                     </div>
                 </div>
 
                 <textarea name="message" rows="10" cols="30" style="width: 100%;" placeholder="Hi Marcos, ..."></textarea>
 
-                <button class="w3-button w3-block w3-section w3-ripple w3-padding"><i class="fa fa-paper-plane"></i> Send Message!</button>
+                <button class="w3-button w3-block w3-section w3-ripple w3-padding" id="message_button"><i class="fa fa-paper-plane"></i> Send Message!</button>
 
             </form>
         </div>
