Added closing management in personal_website inbox - need to improve graphically

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
         </noscript>
 
         <div class="w3-container w3-padding-64">
+            <div class="block_comm"></div>
             <h4>Contact</h4>
             <form id="contact_form">
                 <div class="w3-half">
