Added icon of the website (appears in the tab of the browser)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         </div>
     </noscript>
 
+    <!-- Icon of the website, with my initials -->
+    <link rel="shortcut icon" href="imgs/icon_logo_inverted.png">
+
 </head>
 <body>
 
