--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-user"></i></div>
                         <div class="w3-rest">
-                            <input class="w3-input w3-border" name="firstname" type="text" placeholder="First Name">
+                            <input class="w3-input w3-border mandatory_form" name="firstname" type="text" placeholder="*First Name">
                         </div>
                     </div>
 
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
                         <div class="w3-rest">
-                            <input class="w3-input w3-border" name="email" type="text" placeholder="Email">
+                            <input class="w3-input w3-border mandatory_form" name="email" type="text" placeholder="*Email">
                         </div>
                     </div>
                 </div>
@@ -300,14 +300,14 @@
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-pencil"></i></div>
                         <div class="w3-rest">
-                            <input class="w3-input w3-border" name="subject" type="text" placeholder="Subjet">
+                            <input class="w3-input w3-border mandatory_form" name="subject" type="text" placeholder="*Subjet">
                         </div>
                     </div>
                 </div>
 
-                <textarea name="message" rows="10" cols="30" style="width: 100%;" placeholder="Hi Marcos, ..."></textarea>
+                <textarea class="mandatory_form" name="message" rows="10" cols="30" style="width: 100%;" placeholder="*Hi Marcos, ..."></textarea>
 
-                <button class="w3-button w3-block w3-section w3-ripple w3-padding" id="message_button"><i class="fa fa-paper-plane"></i> Send Message!</button>
+                <button class="w3-button w3-block w3-section waiting_mess w3-padding" id="message_button"><i class="fa fa-paper-plane"></i> Send Message!</button>
 
             </form>
         </div>
@@ -332,4 +332,4 @@
 </footer>
 
 </body>
-</html> 
+</html>
