Improved responsive design of aboutme section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-    <link rel="stylesheet" type="text/css" href="css/responsive_code.css"/>
     <link rel="stylesheet" type="text/css" href="css/personal_website.css"/>
+    <link rel="stylesheet" type="text/css" href="css/responsive_code.css"/>
     <script type="text/javascript" src="js/personal_website.js"></script>
     <script type="text/javascript" src="js/personal_website_jquery.js"></script>
 
@@ -41,6 +41,9 @@
         <div class="noscriptmsg" style="background-color: red; font-size: large; font-weight: bold; text-align: center; border: 5px solid yellow;">
             Why don't you ENABLE JavaScript??  Not only design and content will be better, but also some features...
         </div>
+        <style>
+           #right_graph, #divider, .showing_button, #message_button {display: none;}
+        </style>
     </noscript>
 
     <!-- Icon of the website, with my initials      -->
