--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
     <link rel="stylesheet" type="text/css" href="css/personal_website.css"/>
     <link rel="stylesheet" type="text/css" href="css/responsive_code.css"/>
-    <script type="text/javascript" src="js/personal_website.js"></script>
     <script type="text/javascript" src="js/personal_website_jquery.js"></script>
 
 
@@ -65,6 +64,7 @@
 ++++++++++++++++++++++ Nav Menu(Content) +++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 <div class="w3-black" id="nav_menu">
+    <div class="aux_black_bar"></div>
     <div class="w3-bar">
         <a href="#nav_menu" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Welcome</a>
         <a href="#Experience" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Experience</a>
@@ -78,20 +78,9 @@
         <i class="w3-bar-item w3-button w3-hide-small w3-right lang" id="english_lang"><img src="imgs/flag-of-english.jpg"></i>
     </div>
 
-    <div class="menu hidden" id="menu">
-        <ul>
-            <li><a href="#nav_menu"><i class="fa fa-home"></i> Welcome</a></li>
-            <li><a href="#Experience"><i class="fa fa-user"></i> Experience</a></li>
-            <li><a href="#AboutMe"><i class="fa fa-th"></i> AboutMe</a></li>
-            <li><a href="#Contact"><i class="fa fa-envelope"></i> Contact</a></li>
-
-        </ul>
-    </div>
-
-
-    <div class="menu responsive">
-        <button onclick="show_responsive_nav_menu()" class="dropbtn"></button>
-        <div id="myDropdownNav" class="dropdown-content">
+    <div class="responsive_menu hidden">
+        <button class="dropdown_button"></button>
+        <div id="myDropdownNav" class="dropdown_button-content">
             <a href="#nav_menu">Welcome</a>
             <a href="#Experience">Experience</a>
             <a href="#AboutMe">About me</a>
@@ -107,7 +96,7 @@
 <!--+++++++++++++ Welcome ++++++++++++++++++++++++++++-->
     <div class="w3-container w3-padding-64" id="Welcome">
         <div class="w3-row-padding w3-padding-32" style="margin-left: 5%; margin-right: 5%;">
-            <div class="w3-third w3-container w3-black welcome_text">
+            <div class="w3-container w3-black welcome_text">
                 <div class="text_centered">
                     <h4>Welcome!</h4>
                     <h5>I'm Marcos Bernal, a computer engineering student.
@@ -295,15 +284,15 @@
                         </div>
                     </div>
 
-                    <div class="w3-row w3-section">
+                    <div class="w3-row w3-section prev_row_half">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
                         <div class="w3-rest">
                             <input class="w3-input w3-border mandatory_form" name="email" type="text" placeholder="*Email">
                         </div>
                     </div>
                 </div>
-                <div class="w3-half">
 
+                <div class="w3-half">
                     <div class="w3-row w3-section">
                         <div class="w3-col"><i class="w3-xxlarge fa fa-phone"></i></div>
                         <div class="w3-rest">
